derive/tests/snapshots/foreign_keys_with_equivalent_spellings/Transfer/delete_transfer_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to delete a `Transfer` row in the `transfer` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn delete_transfer_by_id<'a>(
        &'a self,
        id: impl Into<TransferId> + Clone,
    ) -> Result<
        crate::spacetimedsl::delete::DeletionResult,
        crate::spacetimedsl::error::SpacetimeDSLError,
    > {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use crate::spacetimedsl::itertools::Itertools;
        let id = id.clone().into().value();
        let row_to_delete = self.db().transfer().id().find(id);
        let row_to_delete = match row_to_delete {
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "transfer".into(),
                    column_names_and_row_values: format!("{{ id : {} }}", & id).into(),
                });
            }
            Some(row_to_delete) => row_to_delete,
        };
        let mut deletion_result_entry = crate::spacetimedsl::delete::DeletionResultEntry {
            table_name: "transfer".into(),
            column_name: "id".into(),
            strategy: crate::spacetimedsl::delete::OnDeleteStrategy::Delete,
            row_value: format!("{}", TransferId::new(row_to_delete.id.clone())).into(),
            child_entries: vec![],
        };
        match self.db().transfer().id().delete(&row_to_delete.id) {
            false => {
                return Err(
                    crate::spacetimedsl::error::SpacetimeDSLError::Error(
                        "Delete One Error: `count_of_rows_to_delete ( 1 ) != ( 0 ) count_of_deleted_rows`!"
                            .to_string(),
                    ),
                );
            }
            true => {}
        };
        return Ok(crate::spacetimedsl::delete::DeletionResult {
            table_name: "transfer".into(),
            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
            entries: vec![deletion_result_entry],
            error_from_hook: None,
        });
    }
}
