derive/tests/snapshots/foreign_keys_with_equivalent_spellings/Transfer/get_all_transfers.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `transfer` table.
    pub fn get_all_transfers<'a>(&'a self) -> impl Iterator<Item = Transfer> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().transfer().iter()
    }
}
