derive/tests/snapshots/foreign_keys_with_equivalent_spellings/Transfer/get_transfers_by_target_ledger_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Transfer` iterator that contains all rows in the `transfer` table whose value matches the value from the single-column btree index on the `target_ledger_id` column.
    pub fn get_transfers_by_target_ledger_id<'a>(
        &'a self,
        target_ledger_id: impl Into<other_crate::tables::LedgerId>,
    ) -> impl Iterator<Item = Transfer> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().transfer().target_ledger_id().filter(target_ledger_id.into().value())
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Transfer` iterator that contains all rows in the `transfer` table whose value matches the value from the single-column btree index on the `target_ledger_id` column.
    pub fn get_transfers_by_target_ledger_id<'a>(
        &'a self,
        target_ledger_id: impl Into<other_crate::tables::LedgerId>,
    ) -> impl Iterator<Item = Transfer> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().transfer().target_ledger_id().filter(target_ledger_id.into().value())
    }
}
