derive/tests/snapshots/foreign_keys_with_equivalent_spellings/Transfer/internal_methods.snap
---
source: derive/src/characterization_tests.rs
---
// execute_on_delete_strategies_of_the_transfer_table_after_one_row_of_the_ledger_table_was_deleted
impl crate::spacetimedsl::internal::DSLInternals {
    ///Execute On Delete Strategies of the referencing table `transfer` after one row of the referenced table `ledger` was deleted.
    pub fn execute_on_delete_strategies_of_the_transfer_table_after_one_row_of_the_ledger_table_was_deleted<
        'a,
        T: crate::spacetimedsl::WriteContext,
    >(
        dsl: &crate::spacetimedsl::DSL<'_, T>,
        strategy: &crate::spacetimedsl::delete::OnDeleteStrategy,
        primary_key_value_of_a_row_of_another_table_to_delete: &i64,
    ) -> Result<
        Vec<crate::spacetimedsl::delete::DeletionResultEntry>,
        crate::spacetimedsl::delete::OnDeleteStrategyFailure<
            Vec<crate::spacetimedsl::delete::DeletionResultEntry>,
        >,
    > {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use crate::spacetimedsl::itertools::Itertools;
        let mut entries = vec![];
        let mut error_from_hook: Option<
            Box<crate::spacetimedsl::error::SpacetimeDSLError>,
        > = None;
        let mut error = false;
        'outer: {
            match &strategy {
                crate::spacetimedsl::delete::OnDeleteStrategy::Error => {}
                crate::spacetimedsl::delete::OnDeleteStrategy::Delete => {
                    for row in dsl
                        .db()
                        .transfer()
                        .source_ledger_id()
                        .filter(primary_key_value_of_a_row_of_another_table_to_delete)
                    {
                        let child_entries = vec![];
                        let id = &row.id;
                        entries
                            .push(crate::spacetimedsl::delete::DeletionResultEntry {
                                table_name: "transfer".into(),
                                column_name: "source_ledger_id".into(),
                                strategy: crate::spacetimedsl::delete::OnDeleteStrategy::Delete,
                                row_value: format!("{}", TransferId::new(id.clone()))
                                    .into(),
                                child_entries: child_entries,
                            });
                        dsl.db().transfer().id().delete(row.id);
                    }
                    for row in dsl
                        .db()
                        .transfer()
                        .target_ledger_id()
                        .filter(primary_key_value_of_a_row_of_another_table_to_delete)
                    {
                        let child_entries = vec![];
                        let id = &row.id;
                        entries
                            .push(crate::spacetimedsl::delete::DeletionResultEntry {
                                table_name: "transfer".into(),
                                column_name: "target_ledger_id".into(),
                                strategy: crate::spacetimedsl::delete::OnDeleteStrategy::Delete,
                                row_value: format!("{}", TransferId::new(id.clone()))
                                    .into(),
                                child_entries: child_entries,
                            });
                        dsl.db().transfer().id().delete(row.id);
                    }
                }
                crate::spacetimedsl::delete::OnDeleteStrategy::SoftDelete => {}
                crate::spacetimedsl::delete::OnDeleteStrategy::SetZero => {}
                crate::spacetimedsl::delete::OnDeleteStrategy::Ignore => {}
            };
        }
        match error {
            false => Ok(entries),
            true => {
                Err(crate::spacetimedsl::delete::OnDeleteStrategyFailure {
                    entries: entries,
                    error_from_hook: error_from_hook,
                })
            }
        }
    }
}

// execute_on_delete_strategies_of_the_transfer_table_after_multiple_rows_of_the_ledger_table_were_deleted
impl crate::spacetimedsl::internal::DSLInternals {
    ///Execute On Delete Strategies of the referencing table `transfer` after multiple rows of the referenced table `ledger` were deleted.
    pub fn execute_on_delete_strategies_of_the_transfer_table_after_multiple_rows_of_the_ledger_table_were_deleted<
        'a,
        T: crate::spacetimedsl::WriteContext,
    >(
        dsl: &crate::spacetimedsl::DSL<'_, T>,
        strategy: &crate::spacetimedsl::delete::OnDeleteStrategy,
        primary_key_values_of_rows_of_another_table_to_delete: &'a [i64],
    ) -> Result<
        std::collections::HashMap<
            &'a i64,
            Vec<crate::spacetimedsl::delete::DeletionResultEntry>,
        >,
        crate::spacetimedsl::delete::OnDeleteStrategyFailure<
            std::collections::HashMap<
                &'a i64,
                Vec<crate::spacetimedsl::delete::DeletionResultEntry>,
            >,
        >,
    > {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use crate::spacetimedsl::itertools::Itertools;
        let mut entries = std::collections::HashMap::new();
        for primary_key_value_of_a_row_of_another_table_to_delete in primary_key_values_of_rows_of_another_table_to_delete {
            entries
                .insert(primary_key_value_of_a_row_of_another_table_to_delete, vec![]);
        }
        let mut error_from_hook: Option<
            Box<crate::spacetimedsl::error::SpacetimeDSLError>,
        > = None;
        let mut error = false;
        'outer: {
            match &strategy {
                crate::spacetimedsl::delete::OnDeleteStrategy::Error => {}
                crate::spacetimedsl::delete::OnDeleteStrategy::Delete => {
                    for primary_key_value_of_a_row_of_another_table_to_delete in primary_key_values_of_rows_of_another_table_to_delete {
                        for row in dsl
                            .db()
                            .transfer()
                            .source_ledger_id()
                            .filter(
                                primary_key_value_of_a_row_of_another_table_to_delete,
                            )
                        {
                            let child_entries = vec![];
                            let id = &row.id;
                            entries
                                .get_mut(
                                    primary_key_value_of_a_row_of_another_table_to_delete,
                                )
                                .unwrap_or_else(|| {
                                    panic!(
                                        "every primary key value of a removed row of the referenced table was given an entry list before its strategies ran, which does not hold for {}",
                                        primary_key_value_of_a_row_of_another_table_to_delete
                                    )
                                })
                                .push(crate::spacetimedsl::delete::DeletionResultEntry {
                                    table_name: "transfer".into(),
                                    column_name: "source_ledger_id".into(),
                                    strategy: crate::spacetimedsl::delete::OnDeleteStrategy::Delete,
                                    row_value: format!("{}", TransferId::new(id.clone()))
                                        .into(),
                                    child_entries: child_entries,
                                });
                            dsl.db().transfer().id().delete(row.id);
                        }
                        for row in dsl
                            .db()
                            .transfer()
                            .target_ledger_id()
                            .filter(
                                primary_key_value_of_a_row_of_another_table_to_delete,
                            )
                        {
                            let child_entries = vec![];
                            let id = &row.id;
                            entries
                                .get_mut(
                                    primary_key_value_of_a_row_of_another_table_to_delete,
                                )
                                .unwrap_or_else(|| {
                                    panic!(
                                        "every primary key value of a removed row of the referenced table was given an entry list before its strategies ran, which does not hold for {}",
                                        primary_key_value_of_a_row_of_another_table_to_delete
                                    )
                                })
                                .push(crate::spacetimedsl::delete::DeletionResultEntry {
                                    table_name: "transfer".into(),
                                    column_name: "target_ledger_id".into(),
                                    strategy: crate::spacetimedsl::delete::OnDeleteStrategy::Delete,
                                    row_value: format!("{}", TransferId::new(id.clone()))
                                        .into(),
                                    child_entries: child_entries,
                                });
                            dsl.db().transfer().id().delete(row.id);
                        }
                    }
                }
                crate::spacetimedsl::delete::OnDeleteStrategy::SoftDelete => {}
                crate::spacetimedsl::delete::OnDeleteStrategy::SetZero => {}
                crate::spacetimedsl::delete::OnDeleteStrategy::Ignore => {}
            };
        }
        match error {
            false => Ok(entries),
            true => {
                Err(crate::spacetimedsl::delete::OnDeleteStrategyFailure {
                    entries: entries,
                    error_from_hook: error_from_hook,
                })
            }
        }
    }
}
